# smin

./: README.md  pnpm-lock.yaml  replit.md
.agents/memory/: MEMORY.md  smin-delivery-boundary.md
.github/workflows/: smin-native-smoke.ps1  windows-build.yml
artifacts/smin/: index.html  package.json  vite.config.ts  vitest.config.ts
artifacts/smin/.replit-artifact/: artifact.toml
artifacts/smin/sidecar/: README.md  pyproject.toml  smin_sidecar.py
artifacts/smin/src/: App.tsx  index.css
artifacts/smin/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/smin/src-tauri/capabilities/: default.json
artifacts/smin/src-tauri/src/: lib.rs  main.rs
artifacts/smin/src/components/: Sidebar.tsx
artifacts/smin/src/hooks/: use-local-db.ts  use-theme.ts
artifacts/smin/src/lib/: native.ts  validation.test.ts  validation.ts
artifacts/smin/src/pages/: AuditLog.tsx  Dashboard.tsx  ExplorerPlaceholder.tsx  ImportPage.tsx  ProcessingQueue.tsx  ProjectExplorer.tsx  ProjectSetup.tsx  SpatialExplorer.tsx
attached_assets/: Pasted-Do-not-start-Phase-2-yet-Complete-the-remaining-Phase-1_1784756259747.txt  Pasted-The-Phase-1-Windows-completion-gate-is-still-unverified_1784757222365.txt  Pasted-You-are-the-principal-software-architect-mining-softwar_1784755426401.txt
docs/: phase-1.md
samples/: iron-ore-drillholes.csv
samples/smin-iron-ore-demo/: boundary.json  project.smin  validation-results.json
samples/smin-iron-ore-demo/data/assays/: assays.csv
samples/smin-iron-ore-demo/data/collars/: collars.csv
samples/smin-iron-ore-demo/data/density/: density.csv
(+2 files in other folders)
