[package]
name = "smin"
version = "0.1.0"
description = "SMIN — Shanvi Mine Intelligence"
authors = ["Shanvi"]
edition = "2021"

[lib]
name = "smin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]